# 2024-qiita-hackathon

./: README.md
.github/workflows/: update_requirements.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/happy_world/: config.py  main.py
backend/happy_world/exceptions/: convert_exception.py
backend/happy_world/facades/: chatgpt.py  cotoha.py
backend/happy_world/models/: cotoha_emotional_score_dto.py  make_happy_request.py  make_happy_response.py  scoring_request.py  scoring_response.py
chrome_extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
frontend/: README.md  package-lock.json  package.json  tsconfig.node.json
frontend/public/: manifest.json
frontend/src/: App.vue
test/: background.js  content.js  manifest.json  popup.html
