[tool.poetry]
name = "happy-world"
version = "0.1.0"
description = ""
authors = ["sey323 <sey323_nm@yahoo.co.jp>"]
readme = "README.md"
packages = [{include = "happy_world"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.6"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
fastapi = "^0.109.2"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
